--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -42,6 +42,9 @@
                 <li class="nav-item" th:unless="${currentUser}">
                     <a class="nav-link" th:href="@{/user/login}">Đăng nhập</a>
                 </li>
+                <li class="nav-item" th:unless="${currentUser}">
+                    <a class="nav-link" th:href="@{/user/register}">Đăng ký</a>
+                </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/cart}">
                         <i class="bi bi-cart-fill"></i> Giỏ hàng
