--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,3 +1,4 @@
+<!--Tạo base để tái sử dụng template html-->
 <!DOCTYPE html>
 <html lang="vi" xmlns:th="http://www.thymeleaf.org" th:fragment="layout(content)">
 <head>
@@ -14,7 +15,7 @@
     <link rel="stylesheet" th:href="@{/css/style.css}">
     
 </head>
-<body>
+<body class="d-flex flex-column min-vh-100">
     <!-- Thanh tiêu đề -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
         <div class="container">
@@ -60,7 +61,7 @@
 
     <div th:replace="${content}"></div>
 
-    <footer class="bg-dark text-white text-center p-4 mt-5">
+    <footer class="bg-dark text-white text-center p-4 mt-auto">
         <div class="container">
             <p class="mb-0">&copy; 2025 Cửa hàng của tôi. Mọi quyền được bảo lưu.</p>
             <p>
