Add Font Awesome icons and enhance product search input with placeholder

--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -13,9 +13,10 @@
 				<div class="col-md-8 offset-md-2">
 					<form action="/products" method="get">
 						<div class="input-group">
-							<input type="text" class="form-control" name="ch">
+							<input type="text" class="form-control" name="ch" placeholder="Tìm kiếm sản phẩm..."
+								th:value="${param.ch}"> <!--thêm placeholder và giữ nguyên giá trị tìm kiếm-->
 							<button class="btn btn-light text-dark ms-3 col-md-2">
-								<i class="fa-solid fa-magnifying-glass"></i> Tìm kiếm
+								<i class="fa-solid fa-magnifying-glass" ></i> Tìm kiếm
 							</button>
 						</div>
 					</form>
@@ -83,7 +84,7 @@
 					</div>
 					<!-- Start Pagination -->
 					<div class="row">
-						<div class="col-md-4">Total Products : [[${totalElements}]]</div>
+						<div class="col-md-4">Tổng sản phẩm : [[${totalElements}]]</div>
 						<div class="col-md-6">
 							<th:block th:if="${productsSize>0}">
 								<nav aria-label="Page navigation example">
