--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -12,6 +12,10 @@
           crossorigin="anonymous">
 
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <!--thêm cái này để dùng icon từ Font Awesome-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    
+    
     <link rel="stylesheet" th:href="@{/css/style.css}">
     
 </head>
