--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,19 +3,19 @@
       th:replace="~{base::layout(~{::section})}">
 <head>
     <meta charset="ISO-8859-1">
-    <title>Insert title here</title>
+    <title>Trang quản trị</title>
 </head>
 <body>
 <section>
     <div class="container p-5">
-        <p class="text-center fs-3 mt-4">Admin Dashboard</p>
+        <p class="text-center fs-3 mt-4">Bảng điều khiển quản trị</p>
         <div class="row p-5">
             <div class="col-md-4 mt-2">
                 <a href="/admin/loadAddProduct" class="text-decoration-none">
                     <div class="card card-sh">
                         <div class="card-body text-center text-primary">
                             <i class="fa-solid fa-square-plus fa-3x"></i>
-                            <h4>Add Product</h4>
+                            <h4>Thêm sản phẩm</h4>
                         </div>
                     </div>
                 </a>
@@ -27,7 +27,7 @@
                     <div class="card card-sh">
                         <div class="card-body text-center text-warning">
                             <i class="fa-solid fa-list fa-3x"></i>
-                            <h4>Add Category</h4>
+                            <h4>Thêm danh mục</h4>
                         </div>
                     </div>
                 </a>
@@ -39,7 +39,7 @@
                     <div class="card card-sh">
                         <div class="card-body text-center text-success">
                             <i class="fa-solid fa-table-list fa-3x"></i>
-                            <h4>View Product</h4>
+                            <h4>Xem sản phẩm</h4>
                         </div>
                     </div>
                 </a>
@@ -51,7 +51,7 @@
                     <div class="card card-sh">
                         <div class="card-body text-center text-warning">
                             <i class="fa-solid fa-box-open fa-3x"></i>
-                            <h4>Orders</h4>
+                            <h4>Đơn hàng</h4>
                         </div>
                     </div>
                 </a>
@@ -63,7 +63,7 @@
                     <div class="card card-sh">
                         <div class="card-body text-center text-primary">
                             <i class="fa-solid fa-circle-user fa-3x"></i>
-                            <h4>Users</h4>
+                            <h4>Người dùng</h4>
                         </div>
                     </div>
                 </a>
@@ -75,7 +75,7 @@
                     <div class="card card-sh">
                         <div class="card-body text-center text-primary">
                             <i class="fa-solid fa-user-plus fa-3x"></i>
-                            <h4>Add Admin</h4>
+                            <h4>Thêm quản trị viên</h4>
                         </div>
                     </div>
                 </a>
@@ -86,7 +86,7 @@
                     <div class="card card-sh">
                         <div class="card-body text-center text-primary">
                             <i class="fa-solid fa-circle-user fa-3x"></i>
-                            <h4>Admin</h4>
+                            <h4>Quản trị viên</h4>
                         </div>
                     </div>
                 </a>
