--- a/src/main/resources/templates/admin/loadAddProduct.html
+++ b/src/main/resources/templates/admin/loadAddProduct.html
@@ -3,7 +3,7 @@
 	th:replace="~{base::layout(~{::section})}">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Thêm sản phẩm</title>
 </head>
 <body>
 	<section>
@@ -12,7 +12,7 @@
 				<div class="col-md-6 offset-md-3">
 					<div class="card card-sh">
 						<div class="card-header text-center ">
-							<p class="fs-4">Add Product</p>
+							<p class="fs-4">Thêm sản phẩm</p>
 
 							<th:block th:if="${session.succMsg}">
 								<p class="text-success fw-bold">[[${session.succMsg}]]</p>
@@ -29,18 +29,18 @@
 							<form action="/admin/saveProduct" method="post"
 								enctype="multipart/form-data">
 								<div class="mb-3">
-									<label>Enter Title</label> <input type="text" name="title"
+									<label>Nhập Tiêu đề</label> <input type="text" name="title"
 										class="form-control">
 								</div>
 
 								<div class="mb-3">
-									<label>Enter Description</label>
+									<label>Nhập Mô tả</label>
 									<textarea rows="3" cols="" class="form-control"
 										name="description"></textarea>
 								</div>
 
 								<div class="mb-3">
-									<label>Category</label> <select class="form-control"
+									<label>Danh mục</label> <select class="form-control"
 										name="category">
 										<option>--select--</option>
 										<option th:each="c:${categories}">[[${c.name}]]</option>
@@ -48,39 +48,39 @@
 								</div>
 
 								<div class="mb-3">
-									<label>Enter Price</label> <input type="number" name="price"
+									<label>Nhập Giá</label> <input type="number" name="price"
 										class="form-control">
 								</div>
 								<div class="mb-3">
-									<label>Status</label>
+									<label>Trạng thái</label>
 
 									<div class="form-check">
 										<input class="form-check-input" type="radio" checked
 											value="true" name="isActive" id="flexRadioDefault1">
 										<label class="form-check-label" for="flexRadioDefault1">
-											Active </label>
+											Hoạt động </label>
 									</div>
 									<div class="form-check">
 										<input class="form-check-input" type="radio" name="isActive"
 											value="false" id="flexRadioDefault2"> <label
 											class="form-check-label" for="flexRadioDefault2">
-											Inactive </label>
+											Không hoạt động </label>
 									</div>
 
 								</div>
 								<div class="row">
 
 									<div class="mb-3 col">
-										<label>Enter Stock</label> <input type="text" name="stock"
+										<label>Nhập Số lượng</label> <input type="text" name="stock"
 											class="form-control">
 									</div>
 
 									<div class="mb-3 col">
-										<label>Upload Image</label> <input type="file" name="file"
+										<label>Tải ảnh lên</label> <input type="file" name="file"
 											class="form-control">
 									</div>
 								</div>
-								<button class="btn btn-primary col-md-12">Submit</button>
+								<button class="btn btn-primary col-md-12">Xác nhận</button>
 							</form>
 						</div>
 					</div>
