--- a/src/main/resources/templates/admin/category.html
+++ b/src/main/resources/templates/admin/category.html
@@ -3,7 +3,7 @@
 	th:replace="~{base::layout(~{::section})}">
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Admin quản lí trang</title>
 </head>
 <body>
 	<section>
@@ -15,12 +15,12 @@
 							<p class="fs-4">Add Category</p>
 							<th:block th:if="${session.succMsg}">
 								<p class="text-success fw-bold">[[${session.succMsg}]]</p>
-								<th:block th:text="${@commnServiceImpl.removeSessionMessage()}"></th:block>
+								<th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
 							</th:block> 
 
 							<th:block th:if="${session.errorMsg}">
 								<p class="text-danger fw-bold">[[${session.errorMsg}]]</p>
-								<th:block th:text="${@commnServiceImpl.removeSessionMessage()}"></th:block>
+								<th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
 							</th:block>
 
 						</div>
@@ -101,24 +101,30 @@
 									<nav aria-label="Page navigation example">
 										<ul class="pagination">
 											<li class="page-item"
-												th:classappend="${isFirst} ? 'disabled':''"><a
-												class="page-link"
-												th:href="@{'/admin/category?pageNo='+${pageNo-1}}"
-												aria-label="Previous"> <span aria-hidden="true">&laquo;</span>
-											</a></li>
+												th:classappend="${isFirst} ? 'disabled' : ''">
+												<a class="page-link"
+												   th:href="@{'/admin/category?pageNo=' + ${pageNo - 1}}"
+												   aria-label="Previous">
+													<span aria-hidden="true">&laquo;</span>
+												</a>
+											</li>
 
-											<li th:each="i:${#numbers.sequence(1,totalPages)}"
+											<li th:each="i : ${#numbers.sequence(1, totalPages)}"
 												class="page-item"
-												th:classappend="${pageNo+1==i}?'active':''" ]]><a
-												class="page-link"
-												th:href="@{'/admin/category?pageNo='+${i-1}}">[[${i}]]</a></li>
+												th:classappend="${pageNo + 1 == i} ? 'active' : ''">
+												<a class="page-link"
+												   th:href="@{'/admin/category?pageNo=' + ${i - 1}}">[[${i}]]</a>
+											</li>
 
 											<li class="page-item"
-												th:classappend="${isLast} ? 'disabled':''"><a
-												class="page-link"
-												th:href="@{'/admin/category?pageNo='+${pageNo+1}}"
-												aria-label="Next"> <span aria-hidden="true">&raquo;</span>
-											</a></li>
+												th:classappend="${isLast} ? 'disabled' : ''">
+												<a class="page-link"
+												   th:href="@{'/admin/category?pageNo=' + ${pageNo + 1}}"
+												   aria-label="Next">
+													<span aria-hidden="true">&raquo;</span>
+												</a>
+											</li>
+
 										</ul>
 									</nav>
 								</div>
