Add product management features and update HTML templates - Implemented ProductRepository and ProductService interfaces for product management. - Added a new endpoint in AdminController to load the product view. - Updated HTML templates to use UTF-8 encoding and translated text to Vietnamese.

--- a/src/main/resources/templates/admin/loadAddProduct.html
+++ b/src/main/resources/templates/admin/loadAddProduct.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	th:replace="~{base::layout(~{::section})}">
 <head>
-<meta charset="ISO-8859-1">
-<title>Thêm sản phẩm</title>
+	<meta charset="utf-8">
+	<title>Thêm sản phẩm</title>
 </head>
 <body>
 	<section>
