--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -62,8 +62,8 @@
 												<p class="fs-5 text-center">[[${p.title}]]</p>
 												<div class="row text-center">
 													<p class="fs-6 fw-bold ">
-														<span><th:block th:utext="${@commnServiceImpl.rupeeSign()}"></th:block> [[${p.discountPrice}]]</span> <br> <span
-															class="text-decoration-line-through text-secondary"><th:block th:utext="${@commnServiceImpl.rupeeSign()}"></th:block>
+														<span><th:block th:utext="${@commonServiceImpl.rupeeSign()}"></th:block> [[${p.discountPrice}]]</span> <br> <span
+															class="text-decoration-line-through text-secondary"><th:block th:utext="${@commonServiceImpl.rupeeSign()}"></th:block>
 															[[${p.price}]]</span> <span class="fs-6 text-success">[[${p.discount}]]%
 															off </span>
 													</p>
