--- a/src/main/resources/templates/admin/edit_category.html
+++ b/src/main/resources/templates/admin/edit_category.html
@@ -38,18 +38,23 @@
                                 <label>Trạng thái</label>
 
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio"
-                                           th:checked="${category.isActive==true}" value="true"
-                                           name="isActive" id="flexRadioDefault1">
-                                    <label class="form-check-label" for="flexRadioDefault1">
-                                        Hoạt động </label>
+                                    <input class="form-check-input" type="radio" name="isActive"
+                                           id="flexRadioActive" value="true"
+                                           th:checked="${category.isActive == true}">
+                                    <label class="form-check-label" for="flexRadioActive">
+                                        Hoạt động
+                                    </label>
                                 </div>
+
                                 <div class="form-check">
-                                    <input class="form-check-input" type="radio" name="isActive" th:checked="${category.status==false}"
-                                           value="false" id="flexRadioDefault2"> <label
-                                        class="form-check-label" for="flexRadioDefault2">
-                                    Inactive </label>
+                                    <input class="form-check-input" type="radio" name="isActive"
+                                           id="flexRadioInactive" value="false"
+                                           th:checked="${category.isActive == false}">
+                                    <label class="form-check-label" for="flexRadioInactive">
+                                        Không hoạt động
+                                    </label>
                                 </div>
+
 
                             </div>
 
@@ -57,7 +62,7 @@
                                 <label>Upload Image</label> <input type="file" name="file"
                                                                    class="form-control">
                             </div>
-                            <img th:src="@('/img/category_img/'+$(category.imageName)}"
+                            <img th:src="@{|/img/category_img/${category.imageName}|}" alt=""
                                width="100px" height="100px">
                             <button class="btn btn-primary col-md-12 mt-2">Cập nhật</button>
                         </form>
@@ -65,47 +70,8 @@
                 </div>
             </div>
 
-                        <div class="row">
-                            <div class="col-md-4">Tổng danh mục :
-                                [[${totalElements}]]</div>
-                            <div class="col-md-6">
 
-                                <nav aria-label="Page navigation example">
-                                    <ul class="pagination">
-                                        <li class="page-item"
-                                            th:classappend="${isFirst} ? 'disabled' : ''">
-                                            <a class="page-link"
-                                               th:href="@{'/admin/category?pageNo=' + ${pageNo - 1}}"
-                                               aria-label="Previous">
-                                                <span aria-hidden="true">&laquo;</span>
-                                            </a>
-                                        </li>
 
-                                        <li th:each="i : ${#numbers.sequence(1, totalPages)}"
-                                            class="page-item"
-                                            th:classappend="${pageNo + 1 == i} ? 'active' : ''">
-                                            <a class="page-link"
-                                               th:href="@{'/admin/category?pageNo=' + ${i - 1}}">[[${i}]]</a>
-                                        </li>
-
-                                        <li class="page-item"
-                                            th:classappend="${isLast} ? 'disabled' : ''">
-                                            <a class="page-link"
-                                               th:href="@{'/admin/category?pageNo=' + ${pageNo + 1}}"
-                                               aria-label="Next">
-                                                <span aria-hidden="true">&raquo;</span>
-                                            </a>
-                                        </li>
-
-                                    </ul>
-                                </nav>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-
-            </div>
 
         </div>
     </div>
