fix product bugs

--- a/src/main/resources/templates/admin/products.html
+++ b/src/main/resources/templates/admin/products.html
@@ -11,7 +11,7 @@
 			<div class="row">
 				<p class="text-center fs-3 mt-2">Tất cả sản phẩm</p>
 				<hr>
-				<a href="/admin/" class="text-decoration-none"><i
+				<a href="/admin" class="text-decoration-none"><i
 					class="fa-solid fa-arrow-left"></i> Quay lại</a>
 				<th:block th:if="${session.succMsg}">
 					<p class="text-success fw-bold">[[${session.succMsg}]]</p>
