Implement user profile view, update home page routing, and enhance cart functionality

--- a/src/main/resources/templates/view_product.html
+++ b/src/main/resources/templates/view_product.html
@@ -96,7 +96,7 @@
 
               <th:block th:if="${product.stock>0}">
                 <th:block th:if="${user==null}">
-                  <a href="/signin" class="btn btn-danger col-md-12"
+                  <a href="/login" class="btn btn-danger col-md-12"
                     >Add To Cart</a
                   >
                 </th:block>
