--- a/src/main/resources/templates/admin/profile.html
+++ b/src/main/resources/templates/admin/profile.html
@@ -2,8 +2,8 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
 	th:replace="~{base::layout(~{::section})}">
 <head>
-<meta charset="utf-8">
-<title>Hồ sơ của tôi</title>
+<meta charset="ISO-8859-1">
+<title>Insert title here</title>
 </head>
 <body>
 	<section>
@@ -11,15 +11,15 @@
 			<div class="row">
 				<div class="col-md-10 offset-md-1 ">
 
-					<p class="fs-3 text-center">Hồ sơ của tôi</p>
+					<p class="fs-3 text-center">My Profile</p>
 					<th:block th:if="${session.succMsg}">
 						<p class="text-success fw-bold  text-center">[[${session.succMsg}]]</p>
-						<th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
+						<th:block th:text="${@commnServiceImpl.removeSessionMessage()}"></th:block>
 					</th:block>
 
 					<th:block th:if="${session.errorMsg}">
 						<p class="text-danger fw-bold  text-center">[[${session.errorMsg}]]</p>
-						<th:block th:text="${@commonServiceImpl.removeSessionMessage()}"></th:block>
+						<th:block th:text="${@commnServiceImpl.removeSessionMessage()}"></th:block>
 					</th:block>
 					<hr>
 					<div class="text-center">
@@ -31,16 +31,16 @@
 						<table class="table table-borderless">
 
 							<tbody>
-								<form action="/update-profile" method="post"
+								<form action="/admin/update-profile" method="post"
 									enctype="multipart/form-data">
 								<tr>
-									<th scope="row">Tên</th>
+									<th scope="row">Name</th>
 									<td>:</td>
 									<td><input type="text" name="name" class="form-control"
 										th:value="${user.name}"></td>
 								</tr>
 								<tr>
-									<th scope="row">Số điện thoại</th>
+									<th scope="row">Mobile Number</th>
 									<td>:</td>
 									<td><input type="text" name="mobileNumber"
 										class="form-control" th:value="${user.mobileNumber}"></td>
@@ -52,19 +52,19 @@
 										readonly th:value="${user.email}"></td>
 								</tr>
 								<tr>
-									<th scope="row">Địa chỉ</th>
+									<th scope="row">Address</th>
 									<td>:</td>
 									<td><input type="text" name="address" class="form-control"
 										th:value="${user.address}"></td>
 								</tr>
 								<tr>
-									<th scope="row">Xã/Phường</th>
+									<th scope="row">City</th>
 									<td>:</td>
 									<td><input type="text" name="city" class="form-control"
 										th:value="${user.city}"></td>
 								</tr>
 								<tr>
-									<th scope="row">Tỉnh/Thành phố</th>
+									<th scope="row">State</th>
 									<td>:</td>
 									<td><input type="text" name="state" class="form-control"
 										th:value="${user.state}"></td>
@@ -76,19 +76,19 @@
 										th:value="${user.pincode}"></td>
 								</tr>
 								<tr>
-									<th scope="row">Hình ảnh</th>
+									<th scope="row">Image</th>
 									<td>:</td>
 									<td><input type="file" name="img" class="form-control"
 										value=""></td>
 								</tr>
 								<tr>
-									<th scope="row">Vai trò</th>
+									<th scope="row">Role</th>
 									<td>:</td>
 									<td><input type="text" name="" class="form-control"
 										readonly th:value="${user.role}"></td>
 								</tr>
 								<tr>
-									<th scope="row">Trạng thái tài khoản</th>
+									<th scope="row">Account Status</th>
 									<td>:</td>
 									<td><input type="text" name="" class="form-control"
 										readonly th:value="${user.isEnable}"> <input
@@ -98,7 +98,7 @@
 								<tr>
 									<td></td>
 									<td class="text-center">
-										<button class="btn btn-sm bg-primary text-light">Cập nhật</button>
+										<button class="btn btn-sm bg-primary text-light">Update</button>
 									</td>
 								</tr>
 								</form>
@@ -111,26 +111,26 @@
 				<hr>
 				<div class="col-md-10 offset-md-1 mt-1">
 					<div class="row">
-						<p class="text-center fs-3">Đổi mật khẩu</p>
+						<p class="text-center fs-3">Change Password</p>
 						<div class="col-md-6 offset-md-3">
 							<table class="table table-borderless">
 
 								<tbody>
-									<form action="/change-password" method="post">
+									<form action="/admin/change-password" method="post">
 										<tr>
-											<th scope="row">Mật khẩu hiện tại</th>
+											<th scope="row">Current Password</th>
 
 											<td><input type="text" name="currentPassword" class="form-control"></td>
 										</tr>
 
 										<tr>
-											<th scope="row">Mật khẩu mới</th>
+											<th scope="row">New Password</th>
 
 											<td><input type="text" name="newPassword" class="form-control"></td>
 										</tr>
 
 										<tr>
-											<th scope="row">Xác nhận mật khẩu</th>
+											<th scope="row">Confirm Password</th>
 
 											<td><input type="text" name="confirmPassword" class="form-control"></td>
 										</tr>
