--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -40,23 +40,54 @@
                     </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
-                    <li class="nav-item" th:if="${currentUser}">
-                        <a class="nav-link" th:href="@{/profile}" th:text="|Chào, ${currentUser.name}|">Chào, User</a>
+                    <!-- Hiển thị khi CHƯA đăng nhập -->
+                    <li class="nav-item" th:unless="${user}">
+                        <a class="nav-link" th:href="@{/login}">Đăng nhập</a>
                     </li>
-                    <li class="nav-item" th:unless="${currentUser}">
-                        <a class="nav-link" th:href="@{/user/login}">Đăng nhập</a>
+                    <li class="nav-item" th:unless="${user}">
+                        <a class="nav-link" th:href="@{/register}">Đăng ký</a>
                     </li>
-                    <li class="nav-item" th:unless="${currentUser}">
-                        <a class="nav-link" th:href="@{/user/register}">Đăng ký</a>
-                    </li>
-                    <li class="nav-item">
+                    
+                    <!-- Hiển thị khi ĐÃ đăng nhập -->
+                    <li class="nav-item" th:if="${user}">
                         <a class="nav-link" th:href="@{/cart}">
                             <i class="bi bi-cart-fill"></i> Giỏ hàng
-                            <span class="badge bg-danger" th:if="${cartItemCount > 0}" th:text="${cartItemCount}">0</span>
+                            <span class="badge bg-danger" th:if="${countCart > 0}" th:text="${countCart}">0</span>
                         </a>
                     </li>
-                    <li class="nav-item" th:if="${currentUser}">
-                        <a class="nav-link" th:href="@{/logout}">Đăng xuất</a>
+                    
+                    <li class="nav-item dropdown" th:if="${user}">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            <i class="bi bi-person-circle"></i> <span th:text="|Chào, ${user.name}|">Chào, User</span>
+                        </a>
+                        <ul class="dropdown-menu dropdown-menu-end">
+                            <li th:if="${user.role=='ROLE_USER'}">
+                                <a class="dropdown-item" th:href="@{/profile}">
+                                    <i class="bi bi-person"></i> Hồ sơ cá nhân
+                                </a>
+                            </li>
+                            <li th:if="${user.role=='ROLE_ADMIN'}">
+                                <a class="dropdown-item" th:href="@{/profile}">
+                                    <i class="bi bi-person"></i> Hồ sơ cá nhân
+                                </a>
+                            </li>
+                            <li th:if="${user.role=='ROLE_ADMIN'}">
+                                <a class="dropdown-item" th:href="@{/admin}">
+                                    <i class="bi bi-speedometer2"></i> Quản trị
+                                </a>
+                            </li>
+                            <li th:if="${user.role=='ROLE_USER'}">
+                                <a class="dropdown-item" th:href="@{/user-orders}">
+                                    <i class="bi bi-bag"></i> Đơn hàng của tôi
+                                </a>
+                            </li>
+                            <li><hr class="dropdown-divider"></li>
+                            <li>
+                                <a class="dropdown-item" th:href="@{/logout}">
+                                    <i class="bi bi-box-arrow-right"></i> Đăng xuất
+                                </a>
+                            </li>
+                        </ul>
                     </li>
                 </ul>
             </div>
