--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -123,11 +123,11 @@
         <div class="row g-4">
             <div class="col-md-4" th:each="category : ${featuredCategories}">
                 <div class="card text-center">
-                    <img th:src="${category.imageUrl}" class="card-img-top"
+                    <img th:src="@{'img/category_img/'+${category.imageName}}" class="card-img-top"
                          th:alt="${category.name}" style="height: 200px; object-fit: cover;">
                     <div class="card-body">
                         <h5 class="card-title" th:text="${category.name}">Tên Danh mục</h5>
-                        <a th:href="@{/categories/{id}(id=${category.id})}" class="btn btn-outline-primary">Xem</a>
+                        <a th:href="@{/products?category=+${category.name}}" class="btn btn-outline-primary">Xem</a>
                     </div>
                 </div>
             </div>
@@ -140,18 +140,18 @@
         <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4">
             <div class="col" th:each="product : ${featuredProducts}">
                 <div class="card h-100 shadow-sm">
-                    <a th:href="@{/products/{id}(id=${product.id})}">
-                        <img th:src="${product.imageUrl}" class="card-img-top"
-                             th:alt="${product.name}" style="height: 250px; object-fit: cover;">
+                    <a th:href="@{/product/{id}(id=${product.id})}">
+                        <img th:src="@{'img/product_img/'+${product.image}}" class="card-img-top"
+                             th:alt="${product.title}" style="height: 250px; object-fit: cover;">
                     </a>
                     <div class="card-body">
                         <h5 class="card-title">
-                            <a th:href="@{/products/{id}(id=${product.id})}"
+                            <a th:href="@{/product/{id}(id=${product.id})}"
                                class="text-decoration-none text-dark"
-                               th:text="${product.name}">Tên sản phẩm</a>
+                               th:text="${product.title}">Tên sản phẩm</a>
                         </h5>
                         <p class="card-text fw-bold text-danger"
-                           th:text="${#numbers.formatCurrency(product.price)}">
+                           th:text="'₫ ' + ${product.price}">
                             9.999.999 ₫
                         </p>
                     </div>
