--- a/src/main/resources/templates/view_product.html
+++ b/src/main/resources/templates/view_product.html
@@ -95,19 +95,14 @@
               </div>
 
               <th:block th:if="${product.stock>0}">
-                <th:block th:if="${user==null}">
-                  <a href="/signin" class="btn btn-danger col-md-12"
+                <th:block th:if="${user == null}">
+                  <a href="/user/login" class="btn btn-danger col-md-12"
                     >Add To Cart</a
                   >
                 </th:block>
 
-                <th:block th:unless="${user==null}">
-                  <a
-                    th:href="@{'/user/addCart?pid='+${product.id}+'&uid='+${user.id}}"
-                    class="btn btn-danger col-md-12"
-                    >Add To Cart</a
-                  >
-                </th:block>
+                <a th:href="@{'/addCart'(pid=${product.id}, uid=${user.id})}"
+                   class="btn btn-danger col-md-12">Add To Cart</a>
               </th:block>
 
               <th:block th:unless="${product.stock>0}">
