--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -97,7 +97,7 @@
         <div class="container-fluid py-5">
             <h1 class="display-5 fw-bold">Khuyến mãi mùa hè!</h1>
             <p class="fs-4">Giảm giá lên tới 50% cho tất cả các mặt hàng. Đừng bỏ lỡ.</p>
-            <a th:href="@{/products/sale}" class="btn btn-primary btn-lg">Mua ngay</a>
+            <a th:href="@{/products}" class="btn btn-primary btn-lg">Mua ngay</a>
         </div>
     </section>
 
