--- a/src/main/resources/templates/user/order.html
+++ b/src/main/resources/templates/user/order.html
@@ -70,26 +70,26 @@
               <table class="table table-borderless">
                 <tbody>
                 <tr>
-                  <td>Total price</td>
+                  <td>Price</td>
                   <td>:</td>
-                  <td>&#8377; [[${orderPrice}]]</td>
+                  <td>[[${orderPrice}]] VND</td>
                 </tr>
                 <tr>
                   <td>Delivery Fee</td>
                   <td>:</td>
-                  <td>&#8377; 250</td>
+                  <td>25000 VND</td>
                 </tr>
 
                 <tr>
                   <td>Tax</td>
                   <td>:</td>
-                  <td>&#8377; 100</td>
+                  <td>10000 VND</td>
                 </tr>
 
                 <tr class="border-top">
                   <td>Total Price</td>
                   <td>:</td>
-                  <td>&#8377; [[${totalOrderPrice}]]</td>
+                  <td>[[${totalOrderPrice + 25000 + 10000}]] VND</td>
                 </tr>
                 </tbody>
               </table>
